--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/TatsianaSlapik/CRUD_API#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.16",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
