--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   }
