--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "start:dev": "npx nodemon ./main.ts"
+    "start:dev": "npx nodemon ./src/main.ts",
+    "start:prod": "tsc && webpack --mode production && node ./bundle/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,9 @@
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
