--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crud api",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "start:dev": "npx nodemon ./src/main.ts",
     "start:prod": "tsc && webpack --mode production && node ./bundle/bundle.js",
     "start:multi": "npx nodemon ./src/mainCluster.ts"
@@ -29,8 +29,16 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.4",
+    "babel-jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
